--- a/ressources/css/app.css
+++ b/ressources/css/app.css
@@ -1,12 +1,280 @@
-/*Die fixierte Menüzeile*/
+*,
+*::before,
+*::after {
+  box-sizing: inherit; 
+}
 
-.top-bar{
+body {
+  box-sizing:border-box;
+	margin: 0;
+	padding: 0;
+	background: #fefefe;
+	font-family: Lato, Helvetica, Roboto, Arial, sans-serif;
+	font-weight: normal;
+	line-height: 1.5;
+	color: #0a0a0a;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+a {
+	background-color: transparent;
+	line-height: inherit;
+	color: #00bfff;
+	text-decoration: none;
+	cursor: pointer;
+}
+button {
+	display: inline-block;
+	background-color: dodgerblue;
+	border: none;
+	padding: 0.5rem 1rem;
+	font-family: inherit;
+	font-size: 1rem;
+	font-weight: normal;
+	color: #fff;
+}
+
+button:hover {
+	background-color: #aef0ff;
+	color: dodgerblue;
+}
+
+/*Das Suchfeld*/
+
+input {
+	display: inline-block;
+	box-sizing: border-box;
+	max-width: 100%;
+	width: 20rem;
+  margin-right: 1rem;
+	padding: 0.5rem 1rem;
+	border: none;
+	background-color: #fefefe;
+	font-family: inherit;
+	font-size: 1rem;
+	font-weight: normal;
+	line-height: 1.5;
+	color: #0a0a0a;
+	transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+/* Die Menüzeile*/
+
+.top-bar {
 	position: fixed;
 	width: 100%;
 	z-index: 1;
-	box-shadow: 5px 5px 30px 5px #888888;
+	box-shadow: 5px 5px 30px 5px #0e0d0d;
+	flex-wrap: nowrap;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-pack: justify;
+	 justify-content: space-between; 
+	 -ms-flex-align: center; 
+	 align-items: center; 
+	padding: 1rem;
+	box-sizing: border-box;
+	top: 0px;
+	background-color: #1e489d;
 }
 
+/*Der linke Teil der Menüzeile*/
+
+.top-bar .top-bar-left, .tabs-title {
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	margin-right: auto;
+}
+
+/*Der rechte Teil der Menüzeile*/
+
+.top-bar .top-bar-right {
+	-ms-flex: 0 1 auto;
+	flex: 0 1 auto;
+	margin-left: auto;
+	max-width: 100%;
+}
+
+/*Ausklappmenü*/
+.top-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.top-bar li {
+    float: left;
+}
+
+.top-bar li a, .dropbtn {
+    display: inline-block;
+    text-align: center;
+    padding: 0.5rem 1rem;
+}
+
+.top-bar li a:hover, .dropdown:hover .dropbtn {
+	background-color: #aef0ff;
+	color: dodgerblue;
+}
+
+.top-bar li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(0,0,0,0.7);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a:hover, .dropdown-content .is-active {
+	background-color: #aef0ff;
+	color: dodgerblue;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/*Der Inhalt*/
+
+.page{
+  box-sizing:border-box;
+	margin: 5rem auto 0 auto;
+	padding: 0rem 1rem 1rem 1rem;
+	background-color:rgba(255,255,255,0.9);
+	box-shadow: 2px 2px 10px #194290;
+	width:98%;
+	max-width:1440px;
+}
+
+/*Nach Sachgebieten*/
+
+.tabs-title {
+/*    position: absolute;*/
+	background-color: #1e489d;
+  min-width: 160px;
+}
+
+.tabs-title:hover, .is_active {
+	background-color: #aef0ff;
+	color: dodgerblue;
+}
+
+.is_hidden{
+  display:none;
+}
+
+/*.tabs-content {*/
+/*    display: block;*/
+/*}*/
+
+/*Alles unsortiert*/
+
+.wrapper{
+  box-sizing:border-box;
+  display: flex;
+  flex-wrap:wrap;
+	align-items: flex-end;
+	justify-content: space-around;
+}
+.text{
+  padding:1rem;
+  box-sizing:border-box;
+}
+.card{
+  box-sizing:border-box;
+  flex-grow:1;
+  flex-basis:13rem;
+  max-width:15rem;
+  padding:1rem;
+}
+.caption{
+  text-align:center;
+  font-size:120%;
+}
+.icon{
+  width:1.5rem;
+}
+.thumbnail{
+	box-shadow: 5px 5px 30px 5px #0e0d0d;
+  width:100%;
+}
+
+/*Pagination*/
+
+.pagination {
+  margin-left: 0;
+  margin-bottom: 1rem;
+  text-align:center; }
+.pagination::before, .pagination::after {
+  display: table;
+  content: ' ';
+  -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+  -ms-flex-order: 1;
+      order: 1; }
+.pagination::after {
+  clear: both; }
+.pagination li {
+  margin-right: 0.0625rem;
+  border-radius: 3px;
+  font-size: 1.5rem;
+  display: none; }
+  .pagination li:last-child, .pagination li:first-child {
+    display: inline-block; }
+  @media print, screen and (min-width: 40em) {
+    .pagination li {
+      display: inline-block; } }
+.pagination a,
+.pagination button {
+  display: block;
+  padding: 0.1875rem 0.625rem;
+  border-radius: 3px;
+  color: #0a0a0a; }
+  .pagination a:hover,
+  .pagination button:hover {
+    background: #e6e6e6; }
+.pagination .current {
+  padding: 0.1875rem 0.625rem;
+  background: #00bfff;
+  color: #fefefe;
+  cursor: default; }
+.pagination .disabled {
+  padding: 0.1875rem 0.625rem;
+  color: #cacaca;
+  cursor: not-allowed; }
+  .pagination .disabled:hover {
+    background: transparent; }
+.pagination .ellipsis::after {
+  padding: 0.1875rem 0.625rem;
+  content: '\2026';
+  color: #0a0a0a; }
+
+.pagination-previous a::before,
+.pagination-previous.disabled::before {
+  display: inline-block;
+  margin-right: 0.5rem;
+  content: '\00ab'; }
+
+.pagination-next a::after,
+.pagination-next.disabled::after {
+  display: inline-block;
+  margin-left: 0.5rem;
+  content: '\00bb'; }
+/*Die Slider Klasse*/
+.my-slider{
+	overflow: visible;
+	display: flex;
+	align-items: flex-end;
+}
 /*Für das Buch Cover auf der details Seite*/
 
 .detail-img{
@@ -23,48 +291,4 @@
 	box-shadow: 0 -5px 20px 0 #000; 
 }
 
-/*Für die Thumbnails mit Text*/
 
-.container {
-  position:relative;
-  box-shadow: 5px 5px 30px 5px #888888;
-  overflow: hidden;
-}
-
-.container:hover{
-	width: 150%;
-	left: -25%;
-	top: -15%;
-  transition: .5s ease;
-  z-index: 2;
-}
-
-.overlay {
-  position: absolute;
-  background-color: #000000;
-  opacity: 0;
-  transition: .5s ease;
-  padding: 20px;
-}
-
-.container:hover .overlay {
-	position:absolute;
-	color: #ffffff;
-  opacity: 0.8;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  overflow: scroll;
-  transition: .5s ease;
-}
-
-.text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  width: 90%;
-  height: 90%;
-}
